// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Component Accessory shows android 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
  <Accessory
    size={11.333333333333334}
  />
</Container>
`;

exports[`Avatar Component Accessory shows image source 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
  <Accessory
    size={11.333333333333334}
    source={
      Object {
        "uri": "https://homepages.cae.wisc.edu/~ece533/images/baboon.png",
      }
    }
  />
</Container>
`;

exports[`Avatar Component Accessory shows ios 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
  <Accessory
    size={11.333333333333334}
  />
</Container>
`;

exports[`Avatar Component Placeholders renders using icon prop 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    PlaceholderContent={
      <Themed.Icon
        name="home"
        style={
          Object {
            "backgroundColor": "red",
          }
        }
        type="material-community"
      />
    }
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</Container>
`;

exports[`Avatar Component Placeholders renders using icon with defaults 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</Container>
`;

exports[`Avatar Component Placeholders shouldn't show placeholder if not using source 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    PlaceholderContent={
      <Text
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#ffffff",
            "fontSize": 25,
            "textAlign": "center",
          }
        }
      >
        MD
      </Text>
    }
    container={
      Object {
        "style": Object {
          "backgroundColor": "pink",
          "flex": 1,
        },
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</Container>
`;

exports[`Avatar Component Sizes accepts a number 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</Container>
`;

exports[`Avatar Component Sizes accepts large 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</Container>
`;

exports[`Avatar Component Sizes accepts medium 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</Container>
`;

exports[`Avatar Component Sizes accepts small 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</Container>
`;

exports[`Avatar Component Sizes accepts xlarge 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</Container>
`;

exports[`Avatar Component Sizes defaults to small if invalid string given 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</Container>
`;

exports[`Avatar Component allows custom imageProps 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    resizeMode="contain"
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</Container>
`;

exports[`Avatar Component renders rounded 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "borderRadius": 17,
          "flex": 1,
          "overflow": "hidden",
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</Container>
`;

exports[`Avatar Component renders touchable if onPress given 1`] = `
<Container
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</Container>
`;

exports[`Avatar Component should apply values from theme 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "borderRadius": 17,
      "height": 34,
      "width": 34,
    }
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Object {
        "backgroundColor": "transparent",
        "overflow": "hidden",
        "position": "relative",
      }
    }
  >
    <Image
      container={
        Object {
          "style": Object {
            "flex": 1,
          },
        }
      }
      onLoad={[Function]}
      replaceTheme={[Function]}
      source={
        Object {
          "uri": "https://i.imgur.com/0y8Ftya.jpg",
        }
      }
      style={
        Object {
          "bottom": 0,
          "flex": 1,
          "height": null,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": null,
        }
      }
      testID="RNE__Image"
      theme={
        Object {
          "Avatar": Object {
            "imageProps": Object {
              "source": Object {
                "uri": "https://i.imgur.com/0y8Ftya.jpg",
              },
            },
          },
          "colors": Object {
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": Object {
              "android": Object {
                "error": "#f44336",
                "primary": "#2196f3",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "ios": Object {
                "error": "#ff3b30",
                "primary": "#007aff",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
            "success": "#52c41a",
            "warning": "#faad14",
          },
        }
      }
      transition={true}
      updateTheme={[Function]}
    />
    <View
      accessibilityElementsHidden={true}
      importantForAccessibility="no-hide-descendants"
      pointerEvents="none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#bdbdbd",
            "flex": 1,
            "height": null,
            "justifyContent": "center",
            "width": null,
          }
        }
        testID="RNE__Image__placeholder"
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "height": null,
          "width": null,
        }
      }
    />
  </View>
</View>
`;

exports[`Avatar Component should render without issues 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 34,
      "width": 34,
    }
  }
>
  <ForwardRef(Themed.Image)
    container={
      Object {
        "style": Object {
          "flex": 1,
        },
      }
    }
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": null,
        "width": null,
      }
    }
  />
</Container>
`;
